--- a/uknown_3de6l0.void.json
+++ b/uknown_3de6l0.void.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_3de6l0.void",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "dead",
 	"script": "uknown_3de6l0.void",
 	"sector": "VNP_3676",
 	"sec_level": 3,
@@ -23,10 +23,14 @@
 				"from": "VNP_3676",
 				"to": "SPC_7618"
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1571404401577
+		}
 	],
-	"updt": 1568731142156,
-	"edit": 11,
+	"updt": 1570604838888,
+	"edit": 12,
 	"next_scrape": 1570690568843,
 	"category": "UNKNOWN CATEGORY",
 	"last_update": 1570604702985,
