--- a/uknown_3de6l0.cryptography.json
+++ b/uknown_3de6l0.cryptography.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_3de6l0.cryptography",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "dead",
 	"script": "uknown_3de6l0.cryptography",
 	"sector": "VNP_3676",
 	"sec_level": 3,
@@ -23,10 +23,14 @@
 				"from": "VNP_3676",
 				"to": "SPC_7618"
 			}
-		]
+		],
+		{
+			"type": "died",
+			"when": 1571404401577
+		}
 	],
 	"pl_output": "nope",
 	"next_scrape": 1571495680442,
-	"updt": 1571400302384,
-	"edit": 2693
+	"updt": 1571402784878,
+	"edit": 2694
 }
