--- a/unknown_eshkz0.extern_mn7ty3.json
+++ b/unknown_eshkz0.extern_mn7ty3.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_eshkz0.extern_mn7ty3",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "dead",
 	"script": "unknown_eshkz0.extern_mn7ty3",
 	"sector": "K_2217",
 	"sec_level": 4,
@@ -11,10 +11,14 @@
 		{
 			"type": "added",
 			"when": 1569085645113
+		},
+		{
+			"type": "died",
+			"when": 1571464648419
 		}
 	],
-	"updt": 1570702685901,
-	"edit": 10,
+	"updt": 1570714638559,
+	"edit": 11,
 	"scrape_ct": 16,
 	"next_scrape": 1570761253736,
 	"category": "fishie_tank",
