--- a/uknown_ypswbu.gbdis.json
+++ b/uknown_ypswbu.gbdis.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_ypswbu.gbdis",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "dead",
 	"script": "uknown_ypswbu.gbdis",
 	"sector": "NGC_1037",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1564248854714
+		},
+		{
+			"type": "died",
+			"when": 1571487916600
 		}
 	],
 	"next_scrape": 1570873544461,
@@ -93,6 +97,6 @@
 			]
 		}
 	],
-	"updt": 1570784761973,
-	"edit": 234
+	"updt": 1570792436611,
+	"edit": 235
 }
