--- a/unknown_ug3iql.ez40.json
+++ b/unknown_ug3iql.ez40.json
@@ -3,18 +3,26 @@
 	"type": "fragment",
 	"mode": "player",
 	"script": "unknown_ug3iql.ez40",
-	"sector": "K_9556",
+	"sector": "K_1993",
 	"sec_level": 4,
 	"date_added": 1563579072109,
-	"last_scraped": 1571522096596,
+	"last_scraped": 1571523945063,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563579072109
-		}
+		},
+		[
+			{
+				"type": "sector change",
+				"when": 1571523936019,
+				"from": "K_1993",
+				"to": "K_9556"
+			}
+		]
 	],
 	"pl_output": "Cannot read property 'call' of undefined",
-	"next_scrape": 1571612504567,
-	"updt": 1571520215423,
-	"edit": 2597
+	"next_scrape": 1571615533692,
+	"updt": 1571522244580,
+	"edit": 2598
 }
