--- a/unknown_iqjruq.hmbms.json
+++ b/unknown_iqjruq.hmbms.json
@@ -1,20 +1,75 @@
 {
 	"_id": "unknown_iqjruq.hmbms",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "fresh",
 	"script": "unknown_iqjruq.hmbms",
-	"sector": "HJG_0153",
+	"sector": "NGC_4527",
 	"sec_level": 3,
 	"date_added": 1563656181948,
-	"last_scraped": 1571523111256,
+	"last_scraped": 1571524627151,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563656181948
-		}
+		},
+		[
+			{
+				"type": "sector change",
+				"when": 1571524599962,
+				"from": "NGC_4527",
+				"to": "HJG_0153"
+			}
+		]
 	],
 	"pl_output": "`DAccess denied.`",
-	"next_scrape": 1571608890863,
-	"updt": 1571521343286,
-	"edit": 794
+	"next_scrape": 1571524687151,
+	"updt": 1571523144819,
+	"edit": 795,
+	"scrape_ct": 20,
+	"category": "UNKNOWN CATEGORY",
+	"last_update": 1571524627151,
+	"output": [
+		{
+			"args": {},
+			"calls": 351,
+			"base": "`DAccess denied.`",
+			"fragments": [
+				"ing m",
+				"eton ",
+				"y | ne",
+				"g max s",
+				"read, ad",
+				"ew threa",
+				" thread:"
+			],
+			"hits": [
+				{
+					"document": "MFT0XA7_CLST0X1F_SECT0X57C3_FILE0X8C911BB8",
+					"frags": [
+						"ing m",
+						"eton ",
+						"y | ne",
+						"g max s",
+						"read, ad",
+						"ew threa",
+						" thread:"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XA7_CLST0X1F_SECT0X57C3_FILE0X8C911BB8",
+			"frags": [
+				"ing m",
+				"eton ",
+				"y | ne",
+				"g max s",
+				"read, ad",
+				"ew threa",
+				" thread:"
+			]
+		}
+	]
 }
