--- a/unknown_iqjruq.service.json
+++ b/unknown_iqjruq.service.json
@@ -1,16 +1,28 @@
 {
 	"_id": "unknown_iqjruq.service",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "player",
 	"script": "unknown_iqjruq.service",
-	"sector": "HJG_2629",
+	"sector": "HJG_5436",
 	"sec_level": 1,
 	"date_added": 1563656292128,
-	"last_scraped": 0,
+	"last_scraped": 1571524758743,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563656292128
-		}
-	]
+		},
+		[
+			{
+				"type": "sector change",
+				"when": 1571524729432,
+				"from": "HJG_5436",
+				"to": "HJG_2629"
+			}
+		]
+	],
+	"updt": 1563656332647,
+	"edit": 1,
+	"pl_output": "Unexpected token u in JSON at position 0",
+	"next_scrape": 1571617533367
 }
