--- a/unknown_nd836z.logviewer.json
+++ b/unknown_nd836z.logviewer.json
@@ -1,16 +1,69 @@
 {
 	"_id": "unknown_nd836z.logviewer",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_nd836z.logviewer",
 	"sector": "NGC_8726",
 	"sec_level": 4,
 	"date_added": 1571524467110,
-	"last_scraped": 0,
+	"last_scraped": 1571524991550,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571524467110
+		}
+	],
+	"updt": 1571524725258,
+	"edit": 1,
+	"scrape_ct": 20,
+	"next_scrape": 1571525051550,
+	"category": "plant_sim",
+	"last_update": 1571524991550,
+	"output": [
+		{
+			"args": {},
+			"calls": 624,
+			"base": "c:\"dpm3ab\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
+			"fragments": [
+				"h you",
+				"s and ",
+				"ned co",
+				"ady to",
+				"this lu",
+				"t ready ",
+				"lull giv",
+				" and get"
+			],
+			"hits": [
+				{
+					"document": "MFT0XCE_CLST0X15_SECT0XAD0C_FILE0X77AB550B",
+					"frags": [
+						"h you",
+						"s and ",
+						"ned co",
+						"ady to",
+						"this lu",
+						"t ready ",
+						"lull giv",
+						" and get"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XCE_CLST0X15_SECT0XAD0C_FILE0X77AB550B",
+			"frags": [
+				"h you",
+				"s and ",
+				"ned co",
+				"ady to",
+				"this lu",
+				"t ready ",
+				"lull giv",
+				" and get"
+			]
 		}
 	]
 }
