--- a/uknown_vtoo08.glock.json
+++ b/uknown_vtoo08.glock.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_vtoo08.glock",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "skip",
 	"script": "uknown_vtoo08.glock",
 	"sector": "NGC_8726",
 	"sec_level": 4,
@@ -38,5 +38,7 @@
 				"EXPECT m"
 			]
 		}
-	]
+	],
+	"updt": 1571524725258,
+	"edit": 1
 }
