--- a/unknown_ao5a79._.json
+++ b/unknown_ao5a79._.json
@@ -1,16 +1,63 @@
 {
 	"_id": "unknown_ao5a79._",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_ao5a79._",
 	"sector": "NGC_8726",
 	"sec_level": 4,
 	"date_added": 1571524437153,
-	"last_scraped": 0,
+	"last_scraped": 1571524867994,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571524437153
+		}
+	],
+	"updt": 1571524725258,
+	"edit": 1,
+	"scrape_ct": 20,
+	"next_scrape": 1571524927994,
+	"category": "coin_flipper",
+	"last_update": 1571524867994,
+	"output": [
+		{
+			"args": {},
+			"calls": 7240,
+			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
+			"fragments": [
+				" orig",
+				"rupt, ",
+				"ird, r",
+				"ions? ",
+				"ht? ##",
+				"point. #"
+			],
+			"hits": [
+				{
+					"document": "Proving/Children",
+					"frags": [
+						" orig",
+						"rupt, ",
+						"ird, r",
+						"ions? ",
+						"ht? ##",
+						"point. #"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "Proving/Children",
+			"frags": [
+				" orig",
+				"rupt, ",
+				"ird, r",
+				"ions? ",
+				"ht? ##",
+				"point. #"
+			]
 		}
 	]
 }
