--- a/unknown_yadysv.housekeeping_paypal.json
+++ b/unknown_yadysv.housekeeping_paypal.json
@@ -1,16 +1,66 @@
 {
 	"_id": "unknown_yadysv.housekeeping_paypal",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_yadysv.housekeeping_paypal",
 	"sector": "NGC_8726",
 	"sec_level": 4,
 	"date_added": 1571524437153,
-	"last_scraped": 0,
+	"last_scraped": 1571524878832,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571524437153
+		}
+	],
+	"updt": 1571524725258,
+	"edit": 1,
+	"scrape_ct": 20,
+	"next_scrape": 1571524938832,
+	"category": "plant_sim",
+	"last_update": 1571524878832,
+	"output": [
+		{
+			"args": {},
+			"calls": 742,
+			"base": "c:\"9ntpaz\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
+			"fragments": [
+				"o tak",
+				"n ope",
+				" and s",
+				"lity to",
+				"ith max",
+				"achieve",
+				"a senti"
+			],
+			"hits": [
+				{
+					"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
+					"frags": [
+						"o tak",
+						"n ope",
+						" and s",
+						"lity to",
+						"ith max",
+						"achieve",
+						"a senti"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
+			"frags": [
+				"o tak",
+				"n ope",
+				" and s",
+				"lity to",
+				"ith max",
+				"achieve",
+				"a senti"
+			]
 		}
 	]
 }
