--- a/uknown_s5lwn7.bot_scam_do_not_run.json
+++ b/uknown_s5lwn7.bot_scam_do_not_run.json
@@ -1,16 +1,133 @@
 {
 	"_id": "uknown_s5lwn7.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_s5lwn7.bot_scam_do_not_run",
 	"sector": "K_7086",
 	"sec_level": 4,
 	"date_added": 1571525251223,
-	"last_scraped": 0,
+	"last_scraped": 1571525963874,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571525251223
+		}
+	],
+	"updt": 1571525630128,
+	"edit": 1,
+	"scrape_ct": 16,
+	"next_scrape": 1571526023874,
+	"category": "clicker",
+	"last_update": 1571525963874,
+	"output": [
+		{
+			"args": {},
+			"calls": 3915,
+			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
+			"fragments": [
+				"ployee",
+				"access",
+				"s with ",
+				"rt Act ",
+				"r said ",
+				"ion of ",
+				"es. Emp",
+				"ComCODE"
+			],
+			"hits": [
+				{
+					"document": "Erin File",
+					"frags": [
+						"ployee",
+						"access",
+						"s with ",
+						"rt Act ",
+						"r said ",
+						"ion of ",
+						"es. Emp",
+						"ComCODE"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"click": true
+			},
+			"calls": 13244,
+			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
+			"fragments": [
+				"ployee",
+				"access",
+				"s with ",
+				"rt Act ",
+				"r said ",
+				"ion of ",
+				"es. Emp",
+				"ComCODE"
+			],
+			"hits": [
+				{
+					"document": "Erin File",
+					"frags": [
+						"ployee",
+						"access",
+						"s with ",
+						"rt Act ",
+						"r said ",
+						"ion of ",
+						"es. Emp",
+						"ComCODE"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"CLICK": true
+			},
+			"calls": 828,
+			"base": "`LCLICK SECURED`",
+			"fragments": [
+				"ployee",
+				"access",
+				"s with ",
+				"rt Act ",
+				"r said ",
+				"ion of ",
+				"es. Emp",
+				"ComCODE"
+			],
+			"hits": [
+				{
+					"document": "Erin File",
+					"frags": [
+						"ployee",
+						"access",
+						"s with ",
+						"rt Act ",
+						"r said ",
+						"ion of ",
+						"es. Emp",
+						"ComCODE"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "Erin File",
+			"frags": [
+				"ployee",
+				"access",
+				"s with ",
+				"rt Act ",
+				"r said ",
+				"ion of ",
+				"es. Emp",
+				"ComCODE"
+			]
 		}
 	]
 }
