--- a/unknown_6mixmg.cortex.json
+++ b/unknown_6mixmg.cortex.json
@@ -1,16 +1,126 @@
 {
 	"_id": "unknown_6mixmg.cortex",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_6mixmg.cortex",
 	"sector": "K_7086",
 	"sec_level": 4,
 	"date_added": 1571525251223,
-	"last_scraped": 0,
+	"last_scraped": 1571526034733,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571525251223
+		}
+	],
+	"updt": 1571525630128,
+	"edit": 1,
+	"scrape_ct": 18,
+	"next_scrape": 1571526094733,
+	"category": "clicker",
+	"last_update": 1571526034733,
+	"output": [
+		{
+			"args": {},
+			"calls": 4048,
+			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
+			"fragments": [
+				"in or",
+				"end c",
+				"cker ",
+				"ker TR",
+				"nd card",
+				"esolve.",
+				"69 Attac"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"in or",
+						"end c",
+						"cker ",
+						"ker TR",
+						"nd card",
+						"esolve.",
+						"69 Attac"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"click": true
+			},
+			"calls": 3704,
+			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
+			"fragments": [
+				"in or",
+				"end c",
+				"cker ",
+				"ker TR",
+				"nd card",
+				"esolve.",
+				"69 Attac"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"in or",
+						"end c",
+						"cker ",
+						"ker TR",
+						"nd card",
+						"esolve.",
+						"69 Attac"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"CLICK": true
+			},
+			"calls": 772,
+			"base": "`LCLICK SECURED`",
+			"fragments": [
+				"in or",
+				"end c",
+				"cker ",
+				"ker TR",
+				"nd card",
+				"esolve.",
+				"69 Attac"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"in or",
+						"end c",
+						"cker ",
+						"ker TR",
+						"nd card",
+						"esolve.",
+						"69 Attac"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"in or",
+				"end c",
+				"cker ",
+				"ker TR",
+				"nd card",
+				"esolve.",
+				"69 Attac"
+			]
 		}
 	]
 }
