--- a/unknown_fc9arx.scour.json
+++ b/unknown_fc9arx.scour.json
@@ -1,16 +1,72 @@
 {
 	"_id": "unknown_fc9arx.scour",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_fc9arx.scour",
 	"sector": "K_7086",
 	"sec_level": 4,
 	"date_added": 1571525251223,
-	"last_scraped": 0,
+	"last_scraped": 1571526056870,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571525251223
+		}
+	],
+	"updt": 1571526079301,
+	"edit": 2,
+	"scrape_ct": 19,
+	"next_scrape": 1571526116870,
+	"category": "plant_sim",
+	"last_update": 1571526056870,
+	"output": [
+		{
+			"args": {},
+			"calls": 712,
+			"base": "c:\"v0wc4r\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
+			"fragments": [
+				"rly i",
+				"ll st",
+				"head ",
+				"e, Eri",
+				", Erin",
+				" call.",
+				"ly if y",
+				"stay lat",
+				"e season"
+			],
+			"hits": [
+				{
+					"document": "MFT0XD7_CLST0XF7_SECT0X1D2F_FILE0X3A848D07",
+					"frags": [
+						"rly i",
+						"ll st",
+						"head ",
+						"e, Eri",
+						", Erin",
+						" call.",
+						"ly if y",
+						"stay lat",
+						"e season"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XD7_CLST0XF7_SECT0X1D2F_FILE0X3A848D07",
+			"frags": [
+				"rly i",
+				"ll st",
+				"head ",
+				"e, Eri",
+				", Erin",
+				" call.",
+				"ly if y",
+				"stay lat",
+				"e season"
+			]
 		}
 	]
 }
