--- a/unknown_puelke.send.json
+++ b/unknown_puelke.send.json
@@ -1,16 +1,172 @@
 {
 	"_id": "unknown_puelke.send",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_puelke.send",
 	"sector": "K_7086",
 	"sec_level": 4,
 	"date_added": 1571524991550,
-	"last_scraped": 0,
+	"last_scraped": 1571525812899,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571524991550
+		}
+	],
+	"updt": 1571525175937,
+	"edit": 1,
+	"scrape_ct": 18,
+	"next_scrape": 1571525872899,
+	"category": "fishie_tank",
+	"last_update": 1571525812899,
+	"output": [
+		{
+			"args": {},
+			"calls": 7262,
+			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
+			"fragments": [
+				"gain ",
+				"ews b",
+				"s huge",
+				"gettin",
+				"ain to",
+				"expect ",
+				" came f",
+				" GOD DA",
+				"gotta ex",
+				"day beca"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"gain ",
+						"ews b",
+						"s huge",
+						"gettin",
+						"ain to",
+						" came f",
+						" GOD DA",
+						"gotta ex",
+						"day beca"
+					]
+				},
+				{
+					"document": "MFT0XCE_CLST0X15_SECT0XAD0C_FILE0X77AB550B",
+					"frags": [
+						"expect "
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"do": "feed"
+			},
+			"calls": 1110,
+			"base": [
+				"Fishies are happy.",
+				"actuly they look fine",
+				"they are still hungry?",
+				"they don't look so good"
+			],
+			"fragments": [
+				"gain ",
+				"ews b",
+				"s huge",
+				"gettin",
+				"ain to",
+				"expect ",
+				" came f",
+				" GOD DA",
+				"gotta ex",
+				"day beca"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"gain ",
+						"ews b",
+						"s huge",
+						"gettin",
+						"ain to",
+						" came f",
+						" GOD DA",
+						"gotta ex",
+						"day beca"
+					]
+				},
+				{
+					"document": "MFT0XCE_CLST0X15_SECT0XAD0C_FILE0X77AB550B",
+					"frags": [
+						"expect "
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"do": "clean"
+			},
+			"calls": 9362,
+			"base": "Fishies are happy. Algea eaters are displeased.",
+			"fragments": [
+				"gain ",
+				"ews b",
+				"s huge",
+				"gettin",
+				"ain to",
+				"expect ",
+				" came f",
+				" GOD DA",
+				"gotta ex",
+				"day beca"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"gain ",
+						"ews b",
+						"s huge",
+						"gettin",
+						"ain to",
+						" came f",
+						" GOD DA",
+						"gotta ex",
+						"day beca"
+					]
+				},
+				{
+					"document": "MFT0XCE_CLST0X15_SECT0XAD0C_FILE0X77AB550B",
+					"frags": [
+						"expect "
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "NOT FOUND",
+			"frags": [
+				"gain ",
+				"ews b",
+				"s huge",
+				"gettin",
+				"ain to",
+				" came f",
+				" GOD DA",
+				"gotta ex",
+				"day beca"
+			]
+		},
+		{
+			"document": "MFT0XCE_CLST0X15_SECT0XAD0C_FILE0X77AB550B",
+			"frags": [
+				"expect "
+			]
 		}
 	]
 }
