--- a/unknown_v19ae6.public.json
+++ b/unknown_v19ae6.public.json
@@ -1,16 +1,63 @@
 {
 	"_id": "unknown_v19ae6.public",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_v19ae6.public",
 	"sector": "K_7086",
 	"sec_level": 4,
 	"date_added": 1571524991550,
-	"last_scraped": 0,
+	"last_scraped": 1571525822996,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571524991550
+		}
+	],
+	"updt": 1571525175937,
+	"edit": 1,
+	"scrape_ct": 20,
+	"next_scrape": 1571525882996,
+	"category": "dice_roller",
+	"last_update": 1571525822996,
+	"output": [
+		{
+			"args": {},
+			"calls": 7172,
+			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
+			"fragments": [
+				"ow? E",
+				" made?",
+				"nged, g",
+				"RE was ",
+				"to discu",
+				"thing ha"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"ow? E",
+						" made?",
+						"nged, g",
+						"RE was ",
+						"to discu",
+						"thing ha"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "NOT FOUND",
+			"frags": [
+				"ow? E",
+				" made?",
+				"nged, g",
+				"RE was ",
+				"to discu",
+				"thing ha"
+			]
 		}
 	]
 }
