--- a/uknown_8nox4s.keychart.json
+++ b/uknown_8nox4s.keychart.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_8nox4s.keychart",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "could not json",
 	"script": "uknown_8nox4s.keychart",
 	"sector": "NGC_0131",
 	"sec_level": 2,
@@ -12,5 +12,7 @@
 			"type": "added",
 			"when": 1571525492018
 		}
-	]
+	],
+	"updt": 1571525630128,
+	"edit": 1
 }
