--- a/unknown_0blsy8.t3_clean.json
+++ b/unknown_0blsy8.t3_clean.json
@@ -1,16 +1,133 @@
 {
 	"_id": "unknown_0blsy8.t3_clean",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_0blsy8.t3_clean",
 	"sector": "K_7086",
 	"sec_level": 4,
 	"date_added": 1571525251223,
-	"last_scraped": 0,
+	"last_scraped": 1571526004583,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571525251223
+		}
+	],
+	"updt": 1571525630128,
+	"edit": 1,
+	"scrape_ct": 17,
+	"next_scrape": 1571526064583,
+	"category": "clicker",
+	"last_update": 1571526004583,
+	"output": [
+		{
+			"args": {},
+			"calls": 5448,
+			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
+			"fragments": [
+				"other",
+				"wise.\\n",
+				"ur turn",
+				"r turn ",
+				"9B On y",
+				"n your t",
+				"lity.\\n2",
+				"s next?\\n"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"other",
+						"wise.\\n",
+						"ur turn",
+						"r turn ",
+						"9B On y",
+						"n your t",
+						"lity.\\n2",
+						"s next?\\n"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"click": true
+			},
+			"calls": 7421,
+			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
+			"fragments": [
+				"other",
+				"wise.\\n",
+				"ur turn",
+				"r turn ",
+				"9B On y",
+				"n your t",
+				"lity.\\n2",
+				"s next?\\n"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"other",
+						"wise.\\n",
+						"ur turn",
+						"r turn ",
+						"9B On y",
+						"n your t",
+						"lity.\\n2",
+						"s next?\\n"
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"CLICK": true
+			},
+			"calls": 803,
+			"base": "`LCLICK SECURED`",
+			"fragments": [
+				"other",
+				"wise.\\n",
+				"ur turn",
+				"r turn ",
+				"9B On y",
+				"n your t",
+				"lity.\\n2",
+				"s next?\\n"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"other",
+						"wise.\\n",
+						"ur turn",
+						"r turn ",
+						"9B On y",
+						"n your t",
+						"lity.\\n2",
+						"s next?\\n"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"other",
+				"wise.\\n",
+				"ur turn",
+				"r turn ",
+				"9B On y",
+				"n your t",
+				"lity.\\n2",
+				"s next?\\n"
+			]
 		}
 	]
 }
