--- a/unknown_306aj1.bot_scam_do_not_run.json
+++ b/unknown_306aj1.bot_scam_do_not_run.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_306aj1.bot_scam_do_not_run",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "could not json",
 	"script": "unknown_306aj1.bot_scam_do_not_run",
 	"sector": "NGC_0131",
 	"sec_level": 2,
@@ -12,5 +12,7 @@
 			"type": "added",
 			"when": 1571524991550
 		}
-	]
+	],
+	"updt": 1571525175937,
+	"edit": 1
 }
