--- a/unknown_ka17ly.bbs_r.json
+++ b/unknown_ka17ly.bbs_r.json
@@ -1,16 +1,68 @@
 {
 	"_id": "unknown_ka17ly.bbs_r",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "skip",
 	"script": "unknown_ka17ly.bbs_r",
 	"sector": "K_7086",
 	"sec_level": 4,
 	"date_added": 1571524991550,
-	"last_scraped": 0,
+	"last_scraped": 1571525732399,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571524991550
+		}
+	],
+	"updt": 1571525175937,
+	"edit": 1,
+	"retry_args": [
+		{
+			"do": "clean"
+		}
+	],
+	"scrape_ct": 19,
+	"next_scrape": 1571525792399,
+	"category": "fishie_tank",
+	"last_update": 1571525753170,
+	"output": [
+		{
+			"args": {},
+			"calls": 9841,
+			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
+			"fragments": [
+				"' The",
+				"X63A2_F",
+				"- Have ",
+				"_SECT0X6",
+				"T0XE9_SE",
+				":\"transc",
+				"\"They've",
+				"\",\"heade",
+				"C\\n{\"data"
+			]
+		},
+		{
+			"args": {
+				"do": "feed"
+			},
+			"calls": 1199,
+			"base": [
+				"Fishies are happy.",
+				"actuly they look fine",
+				"they are still hungry?",
+				"they don't look so good"
+			],
+			"fragments": [
+				"' The",
+				"X63A2_F",
+				"- Have ",
+				"_SECT0X6",
+				"T0XE9_SE",
+				":\"transc",
+				"\"They've",
+				"\",\"heade",
+				"C\\n{\"data"
+			]
 		}
 	]
 }
