--- a/uknown_esonx7.control.json
+++ b/uknown_esonx7.control.json
@@ -1,16 +1,65 @@
 {
 	"_id": "uknown_esonx7.control",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "skip",
 	"script": "uknown_esonx7.control",
 	"sector": "K_7086",
 	"sec_level": 4,
 	"date_added": 1571526567541,
-	"last_scraped": 0,
+	"last_scraped": 1571527208913,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571526567541
+		}
+	],
+	"updt": 1571527206224,
+	"edit": 2,
+	"retry_args": [
+		{
+			"CLICK": true
+		}
+	],
+	"scrape_ct": 18,
+	"next_scrape": 1571527268913,
+	"category": "clicker",
+	"last_update": 1571527208913,
+	"output": [
+		{
+			"args": {},
+			"calls": 7147,
+			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
+			"fragments": [
+				"y ant",
+				"ed wit",
+				"e can'",
+				"aced w",
+				"today -",
+				"ly be f",
+				"tions, w",
+				"ous gene",
+				"e will i",
+				" - but w"
+			]
+		},
+		{
+			"args": {
+				"click": true
+			},
+			"calls": 10833,
+			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
+			"fragments": [
+				"y ant",
+				"ed wit",
+				"e can'",
+				"aced w",
+				"today -",
+				"ly be f",
+				"tions, w",
+				"ous gene",
+				"e will i",
+				" - but w"
+			]
 		}
 	]
 }
