--- a/uknown_foyevq.exapunks.json
+++ b/uknown_foyevq.exapunks.json
@@ -1,16 +1,61 @@
 {
 	"_id": "uknown_foyevq.exapunks",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "timeout",
 	"script": "uknown_foyevq.exapunks",
 	"sector": "K_7086",
 	"sec_level": 4,
 	"date_added": 1571526567541,
-	"last_scraped": 0,
+	"last_scraped": 1571527269009,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571526567541
+		}
+	],
+	"updt": 1571526754387,
+	"edit": 1,
+	"retry_args": [
+		{
+			"do": "LOSE"
+		}
+	],
+	"scrape_ct": 19,
+	"next_scrape": 1571607295293,
+	"category": "risk_factor",
+	"last_update": 1571527269009,
+	"output": [
+		{
+			"args": {},
+			"calls": 2348,
+			"base": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
+			"fragments": [
+				"ppose",
+				"ay th",
+				"as po",
+				"sed to",
+				"le ## a",
+				" boring",
+				"ut of th",
+				" the bor"
+			]
+		},
+		{
+			"args": {
+				"do": "win"
+			},
+			"calls": 231,
+			"base": "YOU WON 2GC\n...if i could afford to pay out.",
+			"fragments": [
+				"ppose",
+				"ay th",
+				"as po",
+				"sed to",
+				"le ## a",
+				" boring",
+				"ut of th",
+				" the bor"
+			]
 		}
 	]
 }
