--- a/uknown_xgmr0j.t1.json
+++ b/uknown_xgmr0j.t1.json
@@ -1,18 +1,18 @@
 {
-	"_id": "anon_5bestk.make_me_a_sandwich",
+	"_id": "uknown_xgmr0j.t1",
 	"type": "fragment",
 	"mode": "could not json",
-	"script": "anon_5bestk.make_me_a_sandwich",
+	"script": "uknown_xgmr0j.t1",
 	"sector": "NGC_0131",
 	"sec_level": 2,
-	"date_added": 1571526184378,
+	"date_added": 1571527129253,
 	"last_scraped": 0,
 	"script_log": [
 		{
 			"type": "added",
-			"when": 1571526184378
+			"when": 1571527129253
 		}
 	],
-	"updt": 1571526304395,
+	"updt": 1571527206224,
 	"edit": 1
 }
