--- a/uknown_ypla0j.paypal.json
+++ b/uknown_ypla0j.paypal.json
@@ -1,20 +1,81 @@
 {
 	"_id": "uknown_ypla0j.paypal",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "fresh",
 	"script": "uknown_ypla0j.paypal",
-	"sector": "K_7153",
+	"sector": "K_2006",
 	"sec_level": 4,
 	"date_added": 1565331884872,
-	"last_scraped": 1571523362440,
+	"last_scraped": 1571527159001,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565331884872
-		}
+		},
+		[
+			{
+				"type": "sector change",
+				"when": 1571527118659,
+				"from": "K_2006",
+				"to": "K_7153"
+			}
+		]
 	],
 	"pl_output": "`D:::PAYPAL ERROR:::` Please use pay.pal to access your account.",
-	"next_scrape": 1571603710012,
-	"updt": 1571521568920,
-	"edit": 1041
+	"next_scrape": 1571527219001,
+	"updt": 1571523372960,
+	"edit": 1042,
+	"scrape_ct": 20,
+	"category": "UNKNOWN CATEGORY",
+	"last_update": 1571527159001,
+	"output": [
+		{
+			"args": {},
+			"calls": 7882,
+			"base": "`D:::PAYPAL ERROR:::` Please use pay.pal to access your account.",
+			"fragments": [
+				"MFT0X",
+				"BC7D1",
+				" You ",
+				"_FILE0",
+				"32114 ",
+				"_CLST0X",
+				"7A_SECT",
+				"\\nAD0321",
+				"0X7A_SEC"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"MFT0X",
+						"BC7D1",
+						" You ",
+						"_FILE0",
+						"32114 ",
+						"_CLST0X",
+						"7A_SECT",
+						"\\nAD0321",
+						"0X7A_SEC"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"MFT0X",
+				"BC7D1",
+				" You ",
+				"_FILE0",
+				"32114 ",
+				"_CLST0X",
+				"7A_SECT",
+				"\\nAD0321",
+				"0X7A_SEC"
+			]
+		}
+	]
 }
