--- a/uknown_lqxcau.ei701.json
+++ b/uknown_lqxcau.ei701.json
@@ -1,20 +1,82 @@
 {
 	"_id": "uknown_lqxcau.ei701",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "fresh",
 	"script": "uknown_lqxcau.ei701",
-	"sector": "K_3221",
+	"sector": "HJG_6981",
 	"sec_level": 4,
 	"date_added": 1563655759056,
-	"last_scraped": 1571522668351,
+	"last_scraped": 1571528445061,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563655759056
-		}
+		},
+		{
+			"type": "died",
+			"when": 1571528375558
+		},
+		[
+			{
+				"type": "sector change",
+				"when": 1571528416362,
+				"from": "HJG_6981",
+				"to": "K_3221"
+			}
+		]
 	],
 	"pl_output": "                              `F___________  __________    ____`\n                              `F|_________ \\ 0000000000   /   |`\n                              `F         / / 0        0  / /| |`\n                              `F        / /  0        0 /_/ | |`\n                              `F       / /   0        0     | |`\n                              `F      / /    0        0     | |`\n                              `F     / /     0        0     | |`\n                              `F    / /      0        0     | |`\n                              `Fei /_/       0000000000     | |`\n                                               \n                                  `F= hackmud art gallery =`\n                                  `0Last update: 190111.1859`\n\n`FSEARCHING`\nUse `Na`:`V\"show\"` with the parameter `Nname` to show an art by name.\n\n`FLISTING`\nUse `Na`:`V\"list\"` to list out all the art we have.\n\n`FSHARING`\nUse `Na`:`V\"share\"` to share an image in a chat! You can specify a `Nchannel`, and you can set `Nshift` to `Vtrue` for a different look!\n\n`0made by skiilaa`",
-	"next_scrape": 1571609850577,
-	"updt": 1571520665926,
-	"edit": 772
+	"next_scrape": 1571528505061,
+	"updt": 1571522919525,
+	"edit": 773,
+	"scrape_ct": 20,
+	"category": "UNKNOWN CATEGORY",
+	"last_update": 1571528445061,
+	"output": [
+		{
+			"args": {},
+			"calls": 1939,
+			"base": "                              `F___________  __________    ____`\n                              `F|_________ \\ 0000000000   /   |`\n                              `F         / / 0        0  / /| |`\n                              `F        / /  0        0 /_/ | |`\n                              `F       / /   0        0     | |`\n                              `F      / /    0        0     | |`\n                              `F     / /     0        0     | |`\n                              `F    / /      0        0     | |`\n                              `Fei /_/       0000000000     | |`\n                                               \n                                  `F= hackmud art gallery =`\n                                  `0Last update: 190111.1859`\n\n`FSEARCHING`\nUse `Na`:`V\"show\"` with the parameter `Nname` to show an art by name.\n\n`FLISTING`\nUse `Na`:`V\"list\"` to list out all the art we have.\n\n`FSHARING`\nUse `Na`:`V\"share\"` to share an image in a chat! You can specify a `Nchannel`, and you can set `Nshift` to `Vtrue` for a different look!\n\n`0made by skiilaa`",
+			"fragments": [
+				"03214",
+				"_SECT0",
+				"F227_F",
+				"lly: mo",
+				"X7A_SEC",
+				"32143 F",
+				"\\nAD0321",
+				"T0X7A_SE"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"03214",
+						"_SECT0",
+						"F227_F",
+						"lly: mo",
+						"X7A_SEC",
+						"32143 F",
+						"\\nAD0321",
+						"T0X7A_SE"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"03214",
+				"_SECT0",
+				"F227_F",
+				"lly: mo",
+				"X7A_SEC",
+				"32143 F",
+				"\\nAD0321",
+				"T0X7A_SE"
+			]
+		}
+	]
 }
