--- a/uknown_lqxcau.npc.json
+++ b/uknown_lqxcau.npc.json
@@ -3,7 +3,7 @@
 	"type": "fragment",
 	"mode": "timeout",
 	"script": "uknown_lqxcau.npc",
-	"sector": "HJG_2629",
+	"sector": "HJG_5436",
 	"sec_level": 1,
 	"date_added": 1563655768919,
 	"last_scraped": 0,
@@ -11,8 +11,20 @@
 		{
 			"type": "added",
 			"when": 1563655768919
-		}
+		},
+		{
+			"type": "died",
+			"when": 1571528500237
+		},
+		[
+			{
+				"type": "sector change",
+				"when": 1571528565394,
+				"from": "HJG_5436",
+				"to": "HJG_2629"
+			}
+		]
 	],
-	"updt": 1568686417352,
-	"edit": 5
+	"updt": 1571528559010,
+	"edit": 7
 }
