--- a/unknown_opfa3d.fuckthisshitimout.json
+++ b/unknown_opfa3d.fuckthisshitimout.json
@@ -14,5 +14,51 @@
 		}
 	],
 	"scrape_ct": 20,
-	"next_scrape": 1571527942218
+	"next_scrape": 1571527942218,
+	"category": "dice_roller",
+	"last_update": 1571527882218,
+	"output": [
+		{
+			"args": {},
+			"calls": 6779,
+			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
+			"fragments": [
+				"almost",
+				"_FILE0",
+				"7 I al",
+				"MFT0XBF",
+				" I almo",
+				"CLST0X7A",
+				"\\nAD0321D"
+			],
+			"hits": [
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						"almost",
+						"_FILE0",
+						"7 I al",
+						"MFT0XBF",
+						" I almo",
+						"CLST0X7A",
+						"\\nAD0321D"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				"almost",
+				"_FILE0",
+				"7 I al",
+				"MFT0XBF",
+				" I almo",
+				"CLST0X7A",
+				"\\nAD0321D"
+			]
+		}
+	]
 }
