--- a/unknown_uaj51w.extern_h6jp89.json
+++ b/unknown_uaj51w.extern_h6jp89.json
@@ -1,16 +1,57 @@
 {
 	"_id": "unknown_uaj51w.extern_h6jp89",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "timeout",
 	"script": "unknown_uaj51w.extern_h6jp89",
 	"sector": "K_2006",
 	"sec_level": 4,
 	"date_added": 1571527621107,
-	"last_scraped": 0,
+	"last_scraped": 1571527932582,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571527621107
+		}
+	],
+	"updt": 1571527882868,
+	"edit": 1,
+	"retry_args": [
+		{
+			"do": "LOSE"
+		}
+	],
+	"scrape_ct": 20,
+	"next_scrape": 1571612439181,
+	"category": "risk_factor",
+	"last_update": 1571527932582,
+	"output": [
+		{
+			"args": {},
+			"calls": 1145,
+			"base": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
+			"fragments": [
+				"meone.",
+				"ho taug",
+				"ay who ",
+				"aught y",
+				"to teach",
+				"t you?\\n"
+			]
+		},
+		{
+			"args": {
+				"do": "win"
+			},
+			"calls": 312,
+			"base": "YOU WON 2GC\n...if i could afford to pay out.",
+			"fragments": [
+				"meone.",
+				"ho taug",
+				"ay who ",
+				"aught y",
+				"to teach",
+				"t you?\\n"
+			]
 		}
 	]
 }
