--- a/unknown_egmh9p.get.json
+++ b/unknown_egmh9p.get.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_egmh9p.get",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "could not json",
 	"script": "unknown_egmh9p.get",
 	"sector": "HJG_0923",
 	"sec_level": 2,
@@ -12,5 +12,7 @@
 			"type": "added",
 			"when": 1571527621107
 		}
-	]
+	],
+	"updt": 1571527882868,
+	"edit": 1
 }
