--- a/uknown_ka3xv6.runner.json
+++ b/uknown_ka3xv6.runner.json
@@ -1,28 +1,28 @@
 {
 	"_id": "uknown_ka3xv6.runner",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "skip",
 	"script": "uknown_ka3xv6.runner",
 	"sector": "SPC_2379",
 	"sec_level": 4,
 	"date_added": 1571523936019,
-	"last_scraped": 1571524154899,
+	"last_scraped": 1571529148622,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571523936019
 		}
 	],
-	"updt": 1571524048076,
-	"edit": 1,
-	"scrape_ct": 18,
-	"next_scrape": 1571524214899,
+	"updt": 1571524275492,
+	"edit": 2,
+	"scrape_ct": 14,
+	"next_scrape": 1571529208622,
 	"category": "clicker",
-	"last_update": 1571524154899,
+	"last_update": 1571529148622,
 	"output": [
 		{
 			"args": {},
-			"calls": 6678,
+			"calls": 12729,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"ut I ",
@@ -56,7 +56,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 4439,
+			"calls": 18140,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"ut I ",
@@ -135,6 +135,11 @@
 				"it prob",
 				"I hope t"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"CLICK": true
 		}
 	]
 }
