--- a/uknown_yue73c.jpeg.json
+++ b/uknown_yue73c.jpeg.json
@@ -1,16 +1,63 @@
 {
 	"_id": "uknown_yue73c.jpeg",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_yue73c.jpeg",
 	"sector": "SPC_4256",
 	"sec_level": 4,
 	"date_added": 1571529200544,
-	"last_scraped": 0,
+	"last_scraped": 1571529753821,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571529200544
+		}
+	],
+	"updt": 1571529237459,
+	"edit": 1,
+	"scrape_ct": 19,
+	"next_scrape": 1571529813821,
+	"category": "plant_sim",
+	"last_update": 1571529753821,
+	"output": [
+		{
+			"args": {},
+			"calls": 1252,
+			"base": "c:\"9o8szk\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
+			"fragments": [
+				"to put",
+				"nce's ",
+				"ms: the",
+				"uman ope",
+				"aximal f",
+				"al exter"
+			],
+			"hits": [
+				{
+					"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
+					"frags": [
+						"to put",
+						"nce's ",
+						"ms: the",
+						"uman ope",
+						"aximal f",
+						"al exter"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
+			"frags": [
+				"to put",
+				"nce's ",
+				"ms: the",
+				"uman ope",
+				"aximal f",
+				"al exter"
+			]
 		}
 	]
 }
