--- a/unknown_8qobbk.twister.json
+++ b/unknown_8qobbk.twister.json
@@ -1,16 +1,41 @@
 {
 	"_id": "unknown_8qobbk.twister",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "timeout",
 	"script": "unknown_8qobbk.twister",
 	"sector": "SPC_4256",
 	"sec_level": 4,
 	"date_added": 1571529200544,
-	"last_scraped": 0,
+	"last_scraped": 1571529791462,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571529200544
+		}
+	],
+	"updt": 1571529237459,
+	"edit": 1,
+	"retry_args": [
+		{
+			"do": "LOSE"
+		}
+	],
+	"scrape_ct": 19,
+	"next_scrape": 1571529851462,
+	"category": "risk_factor",
+	"last_update": 1571529791462,
+	"output": [
+		{
+			"args": {},
+			"calls": 2974,
+			"base": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
+			"fragments": [
+				"8 Oka",
+				"C9 4 bea",
+				"9 4 beat",
+				"f 3.\\n20C",
+				"?\\n20C9 4"
+			]
 		}
 	]
 }
