--- a/unknown_vl44gu.vec.json
+++ b/unknown_vl44gu.vec.json
@@ -3,18 +3,26 @@
 	"type": "fragment",
 	"mode": "player",
 	"script": "unknown_vl44gu.vec",
-	"sector": "K_7153",
+	"sector": "VNP_4635",
 	"sec_level": 4,
 	"date_added": 1565331352350,
-	"last_scraped": 1571522026234,
+	"last_scraped": 1571529731315,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565331352350
-		}
+		},
+		[
+			{
+				"type": "sector change",
+				"when": 1571529701042,
+				"from": "VNP_4635",
+				"to": "K_7153"
+			}
+		]
 	],
 	"pl_output": "Cannot read property 'read' of undefined",
-	"next_scrape": 1571613484537,
-	"updt": 1571520215423,
-	"edit": 2367
+	"next_scrape": 1571609350607,
+	"updt": 1571522244580,
+	"edit": 2368
 }
