--- a/uknown_en4eip.me.json
+++ b/uknown_en4eip.me.json
@@ -1,16 +1,293 @@
 {
 	"_id": "uknown_en4eip.me",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_en4eip.me",
 	"sector": "SPC_4256",
 	"sec_level": 4,
 	"date_added": 1571529200544,
-	"last_scraped": 0,
+	"last_scraped": 1571529670910,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571529200544
+		}
+	],
+	"updt": 1571529687828,
+	"edit": 2,
+	"scrape_ct": 17,
+	"next_scrape": 1571529730910,
+	"category": "clicker",
+	"last_update": 1571529670910,
+	"output": [
+		{
+			"args": {},
+			"calls": 6572,
+			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
+			"fragments": [
+				"ologi",
+				" The ",
+				"overna",
+				"on Che",
+				"ved tec",
+				"relianc",
+				"disrupt",
+				" disrup",
+				" and pr",
+				"ion as a",
+				"ence of ",
+				"ement, a"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"overna",
+						"on Che",
+						"ved tec",
+						"relianc",
+						"disrupt",
+						" disrup",
+						"ion as a",
+						"ement, a"
+					]
+				},
+				{
+					"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
+					"frags": [
+						" The ",
+						" and pr"
+					]
+				},
+				{
+					"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
+					"frags": [
+						"ologi"
+					]
+				},
+				{
+					"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
+					"frags": [
+						" The "
+					]
+				},
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						" The "
+					]
+				},
+				{
+					"document": "Essence",
+					"frags": [
+						" The "
+					]
+				},
+				{
+					"document": "MFT0XCF_CLST0X84_SECT0X6B58_FILE0X7A81819D",
+					"frags": [
+						"ence of "
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"click": true
+			},
+			"calls": 7235,
+			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
+			"fragments": [
+				"ologi",
+				" The ",
+				"overna",
+				"on Che",
+				"ved tec",
+				"relianc",
+				"disrupt",
+				" disrup",
+				" and pr",
+				"ion as a",
+				"ence of ",
+				"ement, a"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"overna",
+						"on Che",
+						"ved tec",
+						"relianc",
+						"disrupt",
+						" disrup",
+						"ion as a",
+						"ement, a"
+					]
+				},
+				{
+					"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
+					"frags": [
+						" The ",
+						" and pr"
+					]
+				},
+				{
+					"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
+					"frags": [
+						"ologi"
+					]
+				},
+				{
+					"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
+					"frags": [
+						" The "
+					]
+				},
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						" The "
+					]
+				},
+				{
+					"document": "Essence",
+					"frags": [
+						" The "
+					]
+				},
+				{
+					"document": "MFT0XCF_CLST0X84_SECT0X6B58_FILE0X7A81819D",
+					"frags": [
+						"ence of "
+					]
+				}
+			]
+		},
+		{
+			"args": {
+				"CLICK": true
+			},
+			"calls": 2074,
+			"base": "`LCLICK SECURED`",
+			"fragments": [
+				"ologi",
+				" The ",
+				"overna",
+				"on Che",
+				"ved tec",
+				"relianc",
+				"disrupt",
+				" disrup",
+				" and pr",
+				"ion as a",
+				"ence of ",
+				"ement, a"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"overna",
+						"on Che",
+						"ved tec",
+						"relianc",
+						"disrupt",
+						" disrup",
+						"ion as a",
+						"ement, a"
+					]
+				},
+				{
+					"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
+					"frags": [
+						" The ",
+						" and pr"
+					]
+				},
+				{
+					"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
+					"frags": [
+						"ologi"
+					]
+				},
+				{
+					"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
+					"frags": [
+						" The "
+					]
+				},
+				{
+					"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+					"frags": [
+						" The "
+					]
+				},
+				{
+					"document": "Essence",
+					"frags": [
+						" The "
+					]
+				},
+				{
+					"document": "MFT0XCF_CLST0X84_SECT0X6B58_FILE0X7A81819D",
+					"frags": [
+						"ence of "
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "NOT FOUND",
+			"frags": [
+				"overna",
+				"on Che",
+				"ved tec",
+				"relianc",
+				"disrupt",
+				" disrup",
+				"ion as a",
+				"ement, a"
+			]
+		},
+		{
+			"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
+			"frags": [
+				" The ",
+				" and pr"
+			]
+		},
+		{
+			"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
+			"frags": [
+				"ologi"
+			]
+		},
+		{
+			"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
+			"frags": [
+				" The "
+			]
+		},
+		{
+			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
+			"frags": [
+				" The "
+			]
+		},
+		{
+			"document": "Essence",
+			"frags": [
+				" The "
+			]
+		},
+		{
+			"document": "MFT0XCF_CLST0X84_SECT0X6B58_FILE0X7A81819D",
+			"frags": [
+				"ence of "
+			]
 		}
 	]
 }
