--- a/uknown_lecrl6.heart.json
+++ b/uknown_lecrl6.heart.json
@@ -1,16 +1,142 @@
 {
 	"_id": "uknown_lecrl6.heart",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "uknown_lecrl6.heart",
 	"sector": "SPC_4256",
 	"sec_level": 4,
 	"date_added": 1571529200544,
-	"last_scraped": 0,
+	"last_scraped": 1571529701042,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571529200544
+		}
+	],
+	"updt": 1571529237459,
+	"edit": 1,
+	"scrape_ct": 19,
+	"next_scrape": 1571529761042,
+	"category": "coin_flipper",
+	"last_update": 1571529701042,
+	"output": [
+		{
+			"args": {},
+			"calls": 10104,
+			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
+			"fragments": [
+				"tenti",
+				"el th",
+				"AL cl",
+				"g the ",
+				" follo",
+				"at we'v",
+				"the chan"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"tenti",
+						"el th",
+						"AL cl"
+					]
+				},
+				{
+					"document": "MFT0XE7_CLST0X7B_SECT0X8CA8_FILE0X5C879769",
+					"frags": [
+						"g the "
+					]
+				},
+				{
+					"document": "MFT0X71_CLST0X8A_SECT0X7356_FILE0X14AFF93F",
+					"frags": [
+						"g the "
+					]
+				},
+				{
+					"document": "MFT0XA7_CLST0X1F_SECT0X57C3_FILE0X8C911BB8",
+					"frags": [
+						"g the "
+					]
+				},
+				{
+					"document": "Essence",
+					"frags": [
+						"g the "
+					]
+				},
+				{
+					"document": "Erin File",
+					"frags": [
+						" follo"
+					]
+				},
+				{
+					"document": "MFT0X3F_CLST0XD0_SECT0X04CF_FILE0X7ED7C93F",
+					"frags": [
+						"at we'v"
+					]
+				},
+				{
+					"document": "MFT0XCE_CLST0X15_SECT0XAD0C_FILE0X77AB550B",
+					"frags": [
+						"the chan"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "NOT FOUND",
+			"frags": [
+				"tenti",
+				"el th",
+				"AL cl"
+			]
+		},
+		{
+			"document": "MFT0XE7_CLST0X7B_SECT0X8CA8_FILE0X5C879769",
+			"frags": [
+				"g the "
+			]
+		},
+		{
+			"document": "MFT0X71_CLST0X8A_SECT0X7356_FILE0X14AFF93F",
+			"frags": [
+				"g the "
+			]
+		},
+		{
+			"document": "MFT0XA7_CLST0X1F_SECT0X57C3_FILE0X8C911BB8",
+			"frags": [
+				"g the "
+			]
+		},
+		{
+			"document": "Essence",
+			"frags": [
+				"g the "
+			]
+		},
+		{
+			"document": "Erin File",
+			"frags": [
+				" follo"
+			]
+		},
+		{
+			"document": "MFT0X3F_CLST0XD0_SECT0X04CF_FILE0X7ED7C93F",
+			"frags": [
+				"at we'v"
+			]
+		},
+		{
+			"document": "MFT0XCE_CLST0X15_SECT0XAD0C_FILE0X77AB550B",
+			"frags": [
+				"the chan"
+			]
 		}
 	]
 }
