--- a/unknown_43cjrs.db.json
+++ b/unknown_43cjrs.db.json
@@ -1,16 +1,171 @@
 {
 	"_id": "unknown_43cjrs.db",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_43cjrs.db",
 	"sector": "SPC_4256",
 	"sec_level": 4,
 	"date_added": 1571529200544,
-	"last_scraped": 0,
+	"last_scraped": 1571529772754,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571529200544
+		}
+	],
+	"updt": 1571529237459,
+	"edit": 1,
+	"scrape_ct": 20,
+	"next_scrape": 1571529832754,
+	"category": "coin_flipper",
+	"last_update": 1571529772754,
+	"output": [
+		{
+			"args": {},
+			"calls": 5404,
+			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
+			"fragments": [
+				"was i",
+				"hange",
+				"ecaus",
+				". HOW",
+				"uch to",
+				"o much",
+				"got so",
+				"as chan",
+				"discuss.",
+				"cause we",
+				" Everyth",
+				" Che? WH"
+			],
+			"hits": [
+				{
+					"document": "NOT FOUND",
+					"frags": [
+						"was i",
+						". HOW",
+						"uch to",
+						"got so",
+						"as chan",
+						"discuss.",
+						"cause we",
+						" Everyth",
+						" Che? WH"
+					]
+				},
+				{
+					"document": "MFT0X3F_CLST0X0A_SECT0X8F99_FILE0XBD88122E",
+					"frags": [
+						"hange"
+					]
+				},
+				{
+					"document": "Essence",
+					"frags": [
+						"hange"
+					]
+				},
+				{
+					"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
+					"frags": [
+						"ecaus"
+					]
+				},
+				{
+					"document": "MFT0X3F_CLST0XD0_SECT0X04CF_FILE0X7ED7C93F",
+					"frags": [
+						"ecaus"
+					]
+				},
+				{
+					"document": "MFT0XE1_CLST0X61_SECT0X665E_FILE0X0D96F593",
+					"frags": [
+						"ecaus"
+					]
+				},
+				{
+					"document": "Prisoners",
+					"frags": [
+						"ecaus"
+					]
+				},
+				{
+					"document": "MFT0XF4_CLST0XCC_SECT0X7BE4_FILE0XE2A8BDD4",
+					"frags": [
+						"o much"
+					]
+				},
+				{
+					"document": "MFT0XD7_CLST0XF7_SECT0X1D2F_FILE0X3A848D07",
+					"frags": [
+						"o much"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "NOT FOUND",
+			"frags": [
+				"was i",
+				". HOW",
+				"uch to",
+				"got so",
+				"as chan",
+				"discuss.",
+				"cause we",
+				" Everyth",
+				" Che? WH"
+			]
+		},
+		{
+			"document": "MFT0X3F_CLST0X0A_SECT0X8F99_FILE0XBD88122E",
+			"frags": [
+				"hange"
+			]
+		},
+		{
+			"document": "Essence",
+			"frags": [
+				"hange"
+			]
+		},
+		{
+			"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
+			"frags": [
+				"ecaus"
+			]
+		},
+		{
+			"document": "MFT0X3F_CLST0XD0_SECT0X04CF_FILE0X7ED7C93F",
+			"frags": [
+				"ecaus"
+			]
+		},
+		{
+			"document": "MFT0XE1_CLST0X61_SECT0X665E_FILE0X0D96F593",
+			"frags": [
+				"ecaus"
+			]
+		},
+		{
+			"document": "Prisoners",
+			"frags": [
+				"ecaus"
+			]
+		},
+		{
+			"document": "MFT0XF4_CLST0XCC_SECT0X7BE4_FILE0XE2A8BDD4",
+			"frags": [
+				"o much"
+			]
+		},
+		{
+			"document": "MFT0XD7_CLST0XF7_SECT0X1D2F_FILE0X3A848D07",
+			"frags": [
+				"o much"
+			]
 		}
 	]
 }
