--- a/unknown_lq831w.manage.json
+++ b/unknown_lq831w.manage.json
@@ -1,16 +1,78 @@
 {
 	"_id": "unknown_lq831w.manage",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_lq831w.manage",
 	"sector": "SPC_4256",
 	"sec_level": 4,
 	"date_added": 1571529200544,
-	"last_scraped": 0,
+	"last_scraped": 1571529863079,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571529200544
+		}
+	],
+	"updt": 1571529237459,
+	"edit": 1,
+	"scrape_ct": 19,
+	"next_scrape": 1571529923079,
+	"category": "dice_roller",
+	"last_update": 1571529863079,
+	"output": [
+		{
+			"args": {},
+			"calls": 5287,
+			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
+			"fragments": [
+				"ff ou",
+				" the ",
+				" bori",
+				"ts the",
+				"ossibl",
+				"ng stu",
+				"as easy",
+				" suppos",
+				"to say s",
+				"ay. im s",
+				"asy as p"
+			],
+			"hits": [
+				{
+					"document": "MFT0XF4_CLST0XCC_SECT0X7BE4_FILE0XE2A8BDD4",
+					"frags": [
+						"ff ou",
+						" the ",
+						" bori",
+						"ts the",
+						"ossibl",
+						"ng stu",
+						"as easy",
+						" suppos",
+						"to say s",
+						"ay. im s",
+						"asy as p"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0XF4_CLST0XCC_SECT0X7BE4_FILE0XE2A8BDD4",
+			"frags": [
+				"ff ou",
+				" the ",
+				" bori",
+				"ts the",
+				"ossibl",
+				"ng stu",
+				"as easy",
+				" suppos",
+				"to say s",
+				"ay. im s",
+				"asy as p"
+			]
 		}
 	]
 }
