--- a/unknown_0s79ij.bot_scam_do_not_run.json
+++ b/unknown_0s79ij.bot_scam_do_not_run.json
@@ -3,7 +3,7 @@
 	"type": "fragment",
 	"mode": "skip",
 	"script": "unknown_0s79ij.bot_scam_do_not_run",
-	"sector": "VNP_8134",
+	"sector": "K_6492",
 	"sec_level": 0,
 	"date_added": 1566353692405,
 	"last_scraped": 0,
@@ -11,8 +11,20 @@
 		{
 			"type": "added",
 			"when": 1566353692405
-		}
+		},
+		{
+			"type": "died",
+			"when": 1571530459509
+		},
+		[
+			{
+				"type": "sector change",
+				"when": 1571530657696,
+				"from": "K_6492",
+				"to": "VNP_8134"
+			}
+		]
 	],
-	"updt": 1568686417352,
-	"edit": 6
+	"updt": 1570601904054,
+	"edit": 7
 }
