--- a/unknown_0s79ij.get_gc.json
+++ b/unknown_0s79ij.get_gc.json
@@ -3,18 +3,26 @@
 	"type": "fragment",
 	"mode": "player",
 	"script": "unknown_0s79ij.get_gc",
-	"sector": "NGC_1514",
+	"sector": "NGC_5505",
 	"sec_level": 4,
 	"date_added": 1566353692405,
-	"last_scraped": 1571523101517,
+	"last_scraped": 1571530597686,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566353692405
-		}
+		},
+		[
+			{
+				"type": "sector change",
+				"when": 1571530516796,
+				"from": "NGC_5505",
+				"to": "NGC_1514"
+			}
+		]
 	],
-	"updt": 1571521343286,
-	"edit": 1320,
+	"updt": 1571523144819,
+	"edit": 1321,
 	"pl_output": "{\"msg\":\"Hey. farmer_john. You aren't allowed to call this script. Don't `Nforce` your luck.\",\"ok\":false}",
-	"next_scrape": 1571613688354
+	"next_scrape": 1571617929410
 }
