--- a/unknown_azgjul.intranet.json
+++ b/unknown_azgjul.intranet.json
@@ -1,16 +1,57 @@
 {
 	"_id": "unknown_azgjul.intranet",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "skip",
 	"script": "unknown_azgjul.intranet",
 	"sector": "VNP_4635",
 	"sec_level": 4,
 	"date_added": 1571529935529,
-	"last_scraped": 0,
+	"last_scraped": 1571530647430,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571529935529
+		}
+	],
+	"updt": 1571530137663,
+	"edit": 1,
+	"retry_args": [
+		{
+			"do": "LOSE"
+		}
+	],
+	"scrape_ct": 19,
+	"next_scrape": 1571619162614,
+	"category": "risk_factor",
+	"last_update": 1571530647430,
+	"output": [
+		{
+			"args": {},
+			"calls": 1769,
+			"base": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
+			"fragments": [
+				"INMAT",
+				"In a h",
+				"AT?\\n1",
+				"1EBA N",
+				"A None ",
+				"ng BINMA"
+			]
+		},
+		{
+			"args": {
+				"do": "win"
+			},
+			"calls": 249,
+			"base": "YOU WON 2GC\n...if i could afford to pay out.",
+			"fragments": [
+				"INMAT",
+				"In a h",
+				"AT?\\n1",
+				"1EBA N",
+				"A None ",
+				"ng BINMA"
+			]
 		}
 	]
 }
