--- a/unknown_gy05s0.report.json
+++ b/unknown_gy05s0.report.json
@@ -1,16 +1,63 @@
 {
 	"_id": "unknown_gy05s0.report",
 	"type": "fragment",
-	"mode": "new",
+	"mode": "fresh",
 	"script": "unknown_gy05s0.report",
 	"sector": "VNP_4635",
 	"sec_level": 4,
 	"date_added": 1571529935529,
-	"last_scraped": 0,
+	"last_scraped": 1571530725879,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1571529935529
+		}
+	],
+	"updt": 1571530137663,
+	"edit": 1,
+	"scrape_ct": 20,
+	"next_scrape": 1571530785879,
+	"category": "plant_sim",
+	"last_update": 1571530725879,
+	"output": [
+		{
+			"args": {},
+			"calls": 622,
+			"base": "c:\"w20wh3\" d:\"<f l n s w>\"\n\n\n\n\n\n                 \n                 .\n                 ",
+			"fragments": [
+				"awaki",
+				"a | S",
+				"r imiya",
+				"ki smirz",
+				"SER mhol",
+				"BJ: Prio"
+			],
+			"hits": [
+				{
+					"document": "MFT0X93_CLST0X0B_SECT0XB1F1_FILE0X17858BD3",
+					"frags": [
+						"awaki",
+						"a | S",
+						"r imiya",
+						"ki smirz",
+						"SER mhol",
+						"BJ: Prio"
+					]
+				}
+			]
+		}
+	],
+	"identified": [
+		{
+			"document": "MFT0X93_CLST0X0B_SECT0XB1F1_FILE0X17858BD3",
+			"frags": [
+				"awaki",
+				"a | S",
+				"r imiya",
+				"ki smirz",
+				"SER mhol",
+				"BJ: Prio"
+			]
 		}
 	]
 }
