--- a/unknown_0s79ij.db.json
+++ b/unknown_0s79ij.db.json
@@ -3,7 +3,7 @@
 	"type": "fragment",
 	"mode": "skip",
 	"script": "unknown_0s79ij.db",
-	"sector": "NGC_1514",
+	"sector": "NGC_5505",
 	"sec_level": 4,
 	"date_added": 1566353692405,
 	"last_scraped": 0,
@@ -11,8 +11,16 @@
 		{
 			"type": "added",
 			"when": 1566353692405
-		}
+		},
+		[
+			{
+				"type": "sector change",
+				"when": 1571530516796,
+				"from": "NGC_5505",
+				"to": "NGC_1514"
+			}
+		]
 	],
-	"updt": 1566353725070,
-	"edit": 1
+	"updt": 1566353949403,
+	"edit": 2
 }
